force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/SVMXA360__SM_MaintenanceWorkRule__c.object-meta.xml
<CustomObject>
    <description>The Maintenance Work Rule object stores the details about one or more condition rules that apply to a Maintenance Asset on a Maintenance Plan. Work Rules, with their condition definitions, are used to provide dynamic automation for the generation of Work Orders from the Maintenance Plan.</description>
    <label>A360 Maintenance Work Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Rule Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A360 Maintenance Work Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>