force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/fields/SVMXA360__AdvancedExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdvancedExpression__c</fullName>
    <description>To store the advanced expression logic for the conditions defined for the Maintenance Work Rule.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>