force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/fields/SVMXA360__MaintenancePlan__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlan__c</fullName>
    <description>The associated maintenance plan to which work rules are defined.</description>
    <label>A360 Maintenance Plan</label>
    <referenceTo>SVMXA360__SM_MaintenancePlan__c</referenceTo>
    <relationshipLabel>A360 Maintenance Work Rules</relationshipLabel>
    <relationshipName>A360_Maintenance_Work_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>