force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/fields/SVMXA360__MaintenancePlanAsset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated maintenance plan asset to which work rules are defined. A360 Maintenance Plan Work Rules must be associated to a Maintenance Plan Asset, so the condition definitions can qualify based on the asset&apos;s attributes.</description>
    <label>A360 Maintenance Plan Asset</label>
    <referenceTo>SVMXA360__SM_MaintenancePlanAsset__c</referenceTo>
    <relationshipLabel>A360 Maintenance Work Rules</relationshipLabel>
    <relationshipName>A360_Maintenance_Work_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>