force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/fields/SVMXA360__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SortOrder__c</fullName>
    <description>A field for indicating the sort order of the Maintenance Work Rule. Sort Order sets the precedence that determines how work orders are generated when a maintenance plan asset has two or more maintenance work rules generating a work order for the same date. The lowest sort order value takes precedence. This field’s Sort Order can be mapped to the Maintenance Work Rule created based on the Template.</description>
    <label>Sort Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>