force-app/main/default/objects/SVMXA360__SM_MaintenanceWorkRule__c/fields/SVMXA360__WorkType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated work type. Work orders generated from the Work Rule’s maintenance plan will inherit the Work Rule’s work type duration, required skills and products, and linked articles. If this field is left unpopulated, the work order will inherit the work type from either the associated maintenance asset or from the maintenance plan itself.</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>A360 Maintenance Work Rules</relationshipLabel>
    <relationshipName>A360_Maintenance_Work_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>